cmake_minimum_required(VERSION 3.20)
project(practice_C__)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice_C__ main.cpp)



add_executable(1-1-1 "OOP Assignment/1-1/1-1-1.cpp")
add_executable(1-1-2 "OOP Assignment/1-1/1-1-2.cpp")
add_executable(1-1-3 "OOP Assignment/1-1/1-1-3.cpp")
add_executable(1-1-4 "OOP Assignment/1-1/1-1-4.cpp")
add_executable(1-2-1 "OOP Assignment/1-2/1-2-1.cpp")
add_executable(1-2-2 "OOP Assignment/1-2/1-2-2.cpp")
add_executable(1-2-3 "OOP Assignment/1-2/1-2-3.cpp")
add_executable(1-2-4 "OOP Assignment/1-2/1-2-4.cpp")
add_executable(1-3-1 "OOP Assignment/1-3/1-3-1.cpp")
add_executable(1-3-2 "OOP Assignment/1-3/1-3-2.cpp")
add_executable(1-3-3 "OOP Assignment/1-3/1-3-3.cpp")
add_executable(1-3-4 "OOP Assignment/1-3/1-3-4.cpp")
add_executable(2-1-1 "OOP Assignment/2-1/2-1-1.cpp")
add_executable(2-1-2 "OOP Assignment/2-1/2-1-2.cpp")
add_executable(2-1-3 "OOP Assignment/2-1/2-1-3.cpp")
add_executable(2-2-1 "OOP Assignment/2-2/2-2-1.cpp")
add_executable(2-1-4 "OOP Assignment/2-1/2-1-4.cpp")
add_executable(2-2-2 "OOP Assignment/2-2/2-2-2.cpp")
add_executable(2-2-3 "OOP Assignment/2-2/2-2-3.cpp")
add_executable(2-2-4 "OOP Assignment/2-2/2-2-4.cpp")
add_executable(2-3-1 "OOP Assignment/2-3/2-3-1.cpp")
add_executable(2-3-2 "OOP Assignment/2-3/2-3-2.cpp")
add_executable(2-3-3 "OOP Assignment/2-3/2-3-3.cpp")
add_executable(2-3-4 "OOP Assignment/2-3/2-3-4.cpp")
add_executable(2-4-1 "OOP Assignment/2-4/2-4-1.cpp")
add_executable(2-4-2 "OOP Assignment/2-4/2-4-2.cpp")
add_executable(2-4-3 "OOP Assignment/2-4/2-4-3.cpp")
add_executable(2-4-4 "OOP Assignment/2-4/2-4-4.cpp")
add_executable(3-2-1 "OOP Assignment/3-2/3-2-1.cpp")
add_executable(3-2-2 "OOP Assignment/3-2/3-2-2.cpp")
add_executable(3-1-1 "OOP Assignment/3-1/3-1-1.cpp")
add_executable(3-1-2 "OOP Assignment/3-1/3-1-2.cpp")
add_executable(3-1-3 "OOP Assignment/3-1/3-1-3.cpp")
add_executable(3-1-4 "OOP Assignment/3-1/3-1-4.cpp")
add_executable(3-2-4 "OOP Assignment/3-2/3-2-4.cpp")
add_executable(3-3-1 "OOP Assignment/3-3/3-3-1.cpp")
add_executable(3-3-2 "OOP Assignment/3-3/3-3-2.cpp")
add_executable(3-3-3 "OOP Assignment/3-3/3-3-3.cpp")
add_executable(3-3-4 "OOP Assignment/3-3/3-3-4.cpp")
add_executable(project "OOP Assignment/Project/project.cpp")